# uplink

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  determine_version.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  rtd_requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini  verify_deploy.py  verify_tag.py  verify_version.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  pre-commit.yml
docs/: Makefile  index.md
docs/api/: auth.md  clients.md  consumer.md  converters.md  decorators.md  index.md  types.md
docs/plugins/: main.py
docs/source/: advanced.rst  auth.rst  clients.rst  conf.py  consumer.rst  converters.rst  decorators.rst  getting_started.rst  index.rst  install.rst  introduction.rst  quickstart.rst  tips.rst  tutorial.md  tutorial.rst  types.rst
docs/source/.doctrees/: changes.doctree  index.doctree
docs/source/.doctrees/dev/: clients.doctree  consumer.doctree  converters.doctree  decorators.doctree  index.doctree  types.doctree
docs/source/.doctrees/user/: auth.doctree  clients.doctree  install.doctree  introduction.doctree  quickstart.doctree  serialization.doctree  tips.doctree
docs/source/_templates/: links.html  navigation.html
docs/source/dev/: auth.rst  clients.rst  converters.rst  decorators.rst  index.rst  types.rst
docs/source/user/: auth.rst  clients.rst  install.rst  quickstart.rst  serialization.rst  tips.rst
docs/user/: auth.md  clients.md  install.md  introduction.md  quickstart.md  serialization.md  tips.md
examples/: README.md  file_upload.py
examples/async-requests/: README.md  asyncio_example.py  github.py  twisted_example.py
examples/github-api/: README.md  Server.py  Tests.py  keys.sh
examples/handler_callbacks/: README.md  Server.py  handlers_example.py
examples/marshmallow/: README.md  github.py  main.py  schemas.py
requirements.d/: core.txt  dev.txt  docs.txt  tests.txt
tests/: __init__.py  conftest.py  test__extras.py  test_arguments.py  test_auth.py  test_builder.py  test_client.py  test_clients.py  test_commands.py  test_converter.py  test_converters.py  test_decorators.py  test_helpers.py  test_hooks.py  test_integration.py  test_models.py  test_returns.py  test_session.py  test_types.py  test_utils.py
tests/integration/: __init__.py  conftest.py  test_basic.py  test_extend.py  test_form_url_encoded.py  test_handlers.py  test_handlers_aiohttp.py  test_multipart.py  test_ratelimit.py  test_retry.py  test_retry_aiohttp.py  test_returns.py
tests/unit/: conftest.py  test__extras.py  test_aiohttp_client.py  test_arguments.py  test_auth.py  test_builder.py  test_clients.py  test_commands.py  test_converters.py  test_decorators.py  test_helpers.py  test_hooks.py  test_io.py  test_models.py  test_retry.py  test_returns.py  test_session.py  test_utils.py
uplink/: __about__.py  __init__.py  _extras.py  arguments.py  auth.py  backend.py  builder.py  circuit_breaker.py  client.py  commands.py  compat.py  converter.py  decorators.py  exceptions.py  helpers.py  hooks.py  interfaces.py  models.py  ratelimit.py  retry.py  returns.py  session.py  types.py  utils.py
uplink/backend/: __init__.py  asyncio_.py  interfaces.py  requests_.py  twisted_.py
uplink/clients/: __init__.py  aiohttp_.py  client_exceptions.py  exceptions.py  helpers.py  interfaces.py  register.py  registrar.py  requests_.py  twisted_.py
uplink/clients/backend/: actions.py  asyncio_strategy.py  context.py  interfaces.py  state.py  twisted_strategy.py
uplink/clients/io/: __init__.py  actions.py  asyncio_strategy.py  blocking_strategy.py  context.py  default_strategy.py  execution.py  interfaces.py  state.py  templates.py  transitions.py  twisted_strategy.py
uplink/converters/: __init__.py  interfaces.py  keys.py  marshmallow_.py  pydantic_.py  pydantic_v1.py  pydantic_v1_.py  pydantic_v2.py  register.py  standard.py  typing_.py
uplink/retry/: __init__.py  backoff.py  retry.py  stop.py  when.py
uplink/sugar/: processor_mixin.py
